# generic-lens-modern-setup

./: README.md  What_is_the_perfect_optics_setup.md  cabal.project  generic-lens-modern-setup.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: generic-lens-modern-setup-0.1.0.0-inplace.conf  lens-duplicate-fields-0.1.0.0-inplace.conf  package.cache
src/: Dog.hs  LensDemo.hs  UserGroup.hs
